# clairvex-m13-risk-assessment

./: .gitignore  Dockerfile  README.md  docker-compose.llm.yml  docker-compose.yml  package-lock.json  package.json  pyproject.toml
.github/: copilot-instructions.md  dependabot.yml
public/: app.js  index.html  styles.css
src/: app.controller.ts  app.module.ts  app.service.ts  main.ts  risk-assessment.controller.ts  risk-assessment.service.ts
src/ateliers/atelier-1/: atelier-1.service.spec.ts  atelier-1.service.ts
src/ateliers/atelier-2/: atelier-2.service.spec.ts  atelier-2.service.ts
src/ateliers/atelier-3/: atelier-3.service.spec.ts  atelier-3.service.ts
src/ateliers/atelier-4/: atelier-4.service.spec.ts  atelier-4.service.ts
src/ateliers/atelier-5/: atelier-5.service.spec.ts  atelier-5.service.ts
src/clairvex_m13/: __init__.py  engine.py  main.py  models.py
src/clairvex_m13/ebios/: __init__.py  atelier1.py  atelier2.py  atelier3.py  atelier4.py  atelier5.py
src/clairvex_m13/llm/: __init__.py  client.py
src/dto/: atelier-1-output.dto.ts  atelier-2-output.dto.ts  atelier-3-output.dto.ts  atelier-4-output.dto.ts  atelier-5-output.dto.ts  context-input.dto.ts  full-assessment-result.dto.ts
src/llm-core/: ollama.service.ts
src/risk-assessment/: risk-assessment.controller.spec.ts  risk-assessment.controller.ts  risk-assessment.module.ts
src/risk-assessment/dto/: generate-risk-assessment.dto.ts
src/risk-assessment/interfaces/: atelier1.interface.ts  (+5 more)
tests/: __init__.py  test_ebios_ateliers.py  test_engine.py  test_llm_client.py
(+9 files in other folders)
